--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "geist": "^1.3.0",
+    "jszip": "^3.10.1",
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18"
