--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "geist": "^1.3.0",
     "jszip": "^3.10.1",
+    "lucide-react": "^0.372.0",
     "next": "14.2.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "vaul": "^0.9.0"
   },
   "devDependencies": {
     "@types/node": "^20",
