--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^11.1.7",
     "geist": "^1.3.0",
     "jszip": "^3.10.1",
     "lucide-react": "^0.372.0",
