enable vercel analytics

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "framer-motion": "^11.1.7",
     "geist": "^1.3.0",
     "jszip": "^3.10.1",
